wave generator ui changed (#1943)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -676,6 +676,7 @@
     <string name="text_analog">Analog</string>
     <string name="text_pwm">PWM</string>
     <string name="view_text">View</string>
+    <string name="produce_sound_text">Produce Sound</string>
     <string name="save_text">Save</string>
     <string name="phase_holder_text">45 deg</string>
     <string name="duty_holder_text">50 %</string>
